# otmx-dash

./: .gitignore  About.md  LICENSE  README.md  pyproject.toml
app/: main.py
app/components/: __init__.py  metric_card.py
app/core/: db_connection.py  exceptions.py  mlog.py  mlog_perf.py
app/pages/: landing.py  login.py  logout.py  produk.py  reseller.py  settings.py
app/pages/auth/: login.py  logout.py
app/pages/other/: landing.py
app/pages/reports/: __init__.py  produk.py  reseller.py
app/services/: auth.py  auth_credentials.py  auth_guard.py  sql_product.py  srv_product.py  tracking.py
app/services/auth/: __init__.py  adapter.py  credentials.py  guard.py  session.py
app/services/auth/_internal/: __init__.py  config.py  credentials.py
app/services/produk/: __init__.py  adapter.py  repo_main_df.py  repository.py  sql_product.py  state.py
app/services/produk/_internal/: __init__.py  queries.py  repository.py
app/services/produk/internal/: __init__.py  queries.py  repository.py
app/services/shared/: __init__.py  connections.py
app/services/utils/: __init__.py  tracking.py
